# pg-stat-dump

./: .gitignore  Cargo.toml  Dockerfile  Justfile
src/: main.rs  printer.rs
