[package]
name = "pg-stat-dump"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = { version = "3", features = ["termination"] }
lazy_static = "1"
native-tls = "0.2"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
postgres-native-tls = "0.5"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zstd = "0.11"
